fix(Slider): fixed horizontal scrolling on mount in safari

--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -144,3 +144,7 @@
 		opacity: 0;
 	}
 }
+
+.--overflow {
+	overflow: hidden;
+}
